# 5DOF-robotic-arm-project

./: .gitignore  README.md
2_js/: 2_js.c
arduino/2d_js_control/: 2d_js_control.cpp
day1-joystick-pwm/: CMakeLists.txt  led.c
ik_control/: CMakeLists.txt  ik_control.c
ik_js_control/: CMakeLists.txt  ik_js_control.c
move_all/: CMakeLists.txt  move_all.c
movement_test/: CMakeLists.txt  movement_test.c
servo-control/: CMakeLists.txt  servo.c
